# claude-sfx

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
claude-sfx/: .gitignore  NEXT_STEPS.md  README.md  demo.py  pyproject.toml  requirements.txt
claude-sfx/hooks/: claude_code_settings.json  on_complete.sh  on_error.sh  on_prompt.sh  on_thinking.sh
claude-sfx/sfx/: __init__.py  __main__.py  cli.py  config.py  engine.py  generator.py  player.py
claude-sfx/tests/: __init__.py  test_api.py  test_config.py  test_engine.py  test_generator.py  test_player.py  test_sfx.py
